# saligen

./: .eslintrc.json  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  NPM_PUBLISH.md  README.md  TESTING.md  package-lock.json  package.json  setup.sh
.github/workflows/: sdk-generate.yml
sdk/: README.md  generate.sh  openapi.json  openapi.yaml  package-lock.json  package.json  test-sdk.js  test-typescript.ts
sdk/configs/: go.json  java.json  kotlin.json  php.json  python.json  ruby.json  rust.json  swift.json  typescript.json
sdk/wrappers/go/: README.md  client.go  go.mod
sdk/wrappers/java/: README.md  pom.xml
sdk/wrappers/java/src/main/java/com/yourorg/yourapi/: APIError.java  Client.java  ClientOptions.java  CursorPaginatedResponse.java
sdk/wrappers/kotlin/: README.md  build.gradle.kts
sdk/wrappers/kotlin/src/main/kotlin/com/yourorg/yourapi/: Client.kt
sdk/wrappers/php/: README.md  composer.json
sdk/wrappers/php/src/: Client.php
sdk/wrappers/python/: README.md  pyproject.toml  setup.py
sdk/wrappers/python/devdraft_sdk/: __init__.py
sdk/wrappers/python/yourapi/: __init__.py
sdk/wrappers/ruby/: README.md  yourapi.gemspec
sdk/wrappers/rust/: Cargo.toml  README.md
sdk/wrappers/rust/src/: lib.rs
sdk/wrappers/swift/: Package.swift  README.md
sdk/wrappers/swift/Sources/YourAPI/: Client.swift
sdk/wrappers/typescript/: README.md  index.ts  package.json  tsconfig.json
