[package]
name = "yourapi"
version = "0.1.0"
edition = "2021"
authors = ["YourOrg <api@yourorg.com>"]
description = "Rust SDK for YourAPI with production-ready features"
license = "MIT"
repository = "https://github.com/yourorg/yourapi-rust"
homepage = "https://github.com/yourorg/yourapi-rust"
documentation = "https://docs.rs/yourapi"
keywords = ["yourapi", "sdk", "api-client", "rest"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

