[package]
name = "devdraft-sdk"
version = "0.1.0"
edition = "2021"
authors = ["devdraft <engineering@devdraft.ai>"]
description = "Rust SDK for DevDraft API with production-ready features"
license = "MIT"
repository = "https://github.com/devdraft/devdraft-rust"
homepage = "https://github.com/devdraft/devdraft-rust"
documentation = "https://docs.rs/devdraft-sdk"
keywords = ["devdraft", "devdraft-sdk", "sdk", "api-client", "rest"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

